--- a/s/styles.css
+++ b/s/styles.css
@@ -52,6 +52,10 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .horizontal-list {
     list-style-type: none;
     margin: 0;
