--- a/s/styles.css
+++ b/s/styles.css
@@ -50,6 +50,14 @@ h4 a {
 
 p {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 8px;
+}
+
+p.subtext {
+    font-family: Arial, Helvetica, sans-serif;
+    color: grey;
+    font-size: 12px;
+    margin: 0px;
 }
 
 a {
